--- a/test.htm
+++ b/test.htm
@@ -15,6 +15,6 @@
 	inp.createInputWithLabel("Number Input",	"inpId4", "number",		"", "subID");
 	inp.createInputWithLabel("Password Input",	"inpId5", "password",	"","subID");
 	inp.createInputWithLabel("Bool Input",		"inpId6", "bool",		"", "subID");
-	
+	inp.render();
 	</script>
 </body>
