Added changes to Readme file regarding JSON Support

--- a/testJSON.htm
+++ b/testJSON.htm
@@ -10,6 +10,7 @@
 	var inp = new Inputer('inputContent', 'ErrorBox');
 	
 	inp.loadFormJSON({
+		form:{},
 		inputs:[,
 			{dispName:"Text Input",		id:"TextInput",		type:"text"},
 			{dispName:"IP Input",		id:"IPInput",		type:"ip"},
